--- a/app/webComponents/common/hsUiGridTemplates/css/uiGridTemplates.css
+++ b/app/webComponents/common/hsUiGridTemplates/css/uiGridTemplates.css
@@ -1,3 +1,6 @@
+.dataBase-grid .ui-grid-header-cell {
+  height: 100px; }
+
 .search-grid .ui-grid-cell-contents {
   border: none; }
 
@@ -26,7 +29,6 @@ div.ui-grid-cell input.edit-input {
 .ui-grid-row:nth-child(odd) .ui-grid-cell {
   background-color: transparent;
   border-right: none; }
-
 .ui-grid-row:nth-child(even) .ui-grid-cell {
   background-color: transparent;
   border-right: none; }
@@ -67,9 +69,6 @@ div.ui-grid-cell input.edit-input {
 
 .ui-grid-top-panel {
   background: #ffffff !important; }
-
-.ui-grid-header {
-  border-bottom: none; }
 
 .ui-grid-header-cell .sortable {
   border-right: 1px solid #eeeeee; }
@@ -113,4 +112,4 @@ div.ui-grid-cell input.edit-input {
   margin-left: 0px;
   margin-top: 18px; }
 
-/*# sourceMappingURL=../../../../../maps/webComponents/common/hsUiGridTemplates/css/uiGridTemplates.css.map */
+/*# sourceMappingURL=uiGridTemplates.css.map */
