--- a/app/webComponents/common/hsUiGridTemplates/css/uiGridTemplates.scss
+++ b/app/webComponents/common/hsUiGridTemplates/css/uiGridTemplates.scss
@@ -1,4 +1,7 @@
 @charset "utf-8";
+.dataBase-grid .ui-grid-header-cell{
+  height: 100px;
+}
 .search-grid .ui-grid-cell-contents{
   border:none
 }
@@ -103,7 +106,7 @@ div.ui-grid-cell input.edit-input{
   background: #ffffff !important;
 }
 .ui-grid-header{
-  border-bottom: none;
+  //border-bottom: none;
 }
 .ui-grid-header-cell .sortable{
   border-right: 1px solid #eeeeee;
