--- a/app/webComponents/login/css/login.css
+++ b/app/webComponents/login/css/login.css
@@ -84,7 +84,7 @@
 .normal--user--login {
   width: 100%;
   height: 100%;
-  background: #f5f5f5;
+  background: url(../images/login--bg.jpg) no-repeat center;
   overflow-y: auto;
   position: relative; }
   .normal--user--login .top--logo--box {
@@ -104,10 +104,12 @@
         padding: 10px 0; }
   .normal--user--login .input-content-wrapper {
     width: 420px;
-    margin: 100px auto 0;
-    background: #ffffff;
+    margin: 160px auto 0;
+    font-size: 14px !important;
     border-radius: 5px;
-    padding: 30px; }
+    padding: 30px;
+    box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.1);
+    background: rgba(255, 255, 255, 0.65); }
     .normal--user--login .input-content-wrapper .caption {
       display: inline-block;
       font-size: 18px;
@@ -124,7 +126,21 @@
         height: 40px;
         line-height: 40px;
         border: 1px solid #e1e1e1;
-        border-radius: 5px; }
+        border-radius: 5px;
+        background: #ffffff; }
+      .normal--user--login .input-content-wrapper .input-content--box .user-login-input .select--language--title {
+        font-weight: normal;
+        transform: none;
+        color: rgba(0, 0, 0, 0.54);
+        width: 75px;
+        vertical-align: text-top; }
+      .normal--user--login .input-content-wrapper .input-content--box .user-login-input .select--language--box {
+        margin: 0px; }
+        .normal--user--login .input-content-wrapper .input-content--box .user-login-input .select--language--box__select {
+          margin: 0px;
+          width: 270px; }
+      .normal--user--login .input-content-wrapper .input-content--box .user-login-checkbox {
+        margin: 20px 0; }
     .normal--user--login .input-content-wrapper .user-login-btn {
       width: 100%;
       height: 40px; }
@@ -137,4 +153,4 @@
     left: 50%;
     margin-left: -490px; }
 
-/*# sourceMappingURL=../../../../maps/webComponents/login/css/login.css.map */
+/*# sourceMappingURL=login.css.map */
