js:workFlow adjust

--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -18,7 +18,7 @@ body {
 
 
 .info--archive--main--content--wrapper{
-  width: 1366px;
+  width: 1920px;
   margin: 0 auto;
   height: 100%;
   position: relative;
@@ -26,14 +26,17 @@ body {
     height: 100%;
     width: 178px;
     background: #464646;
+    position: relative !important;
+    z-index: 99;
+    box-shadow: -5px 0px 10px 3px rgba(0,0,0,0.1) inset;
     .header{
-      height: 55px;
-      min-height: 55px;
+      height: 57px;
+      min-height: 57px;
       background: #40b98e;
       font-size: 18px;
       border-right: 1px solid #40b98e;
       .md-toolbar-tools{
-        height: 55px;
+        height: 57px;
         font-size: 18px;
       }
     }
@@ -55,13 +58,26 @@ body {
         .separate--column--header{
           background: transparent;
           color: #848484;
+          .md-subheader-inner{
+            border-bottom: 1px solid #505050;
+            padding-bottom: 6px;
+            padding-left: 30px;
+            font-size: 12px;
+          }
         }
         .each--column--box{
-          border-left: 5px solid transparent;
+          border-left: 5px solid #464646;
           &.active {
             background-color: #333333;
             color: #ffffff !important;
-            border-left: 5px solid #fa7455;
+            border-left: 5px solid #de6262;
+            &:hover{
+              cursor: default !important;
+              background: #464646 !important;
+            }
+          }
+          &:hover{
+            border-color: #848484;
           }
           &__text{
             min-height: 40px;
@@ -74,7 +90,9 @@ body {
             }
           }
           .md-button{
-            min-height: 40px;
+            height: 48px;
+            line-height: 48px;
+            padding-left: 27px;
           }
         }
       }
@@ -87,18 +105,28 @@ body {
     right: 0px;
     bottom: 0px;
     .top--head--box{
-      height: 55px;
-      width: 1188px;
+      height: 57px;
+      width: 1742px;
       background: #eaeae2;
     }
     .data--base--sidenav--box{
-      overflow-x: hidden;
+      //overflow-x: hidden;
+      position: relative;
+      z-index: 10;
       width: 100%;
-      height: calc(100% - 55px);
+      height: calc(100% - 57px);
+      border-top: 1px solid #dfe0e1;
+      border-left: 1px solid #d7d7d7;
+      border-right: 1px solid #f2f2f2;
       //clear: both;
       .data--base--sidenav{
         float: left;
         height: 100%;
+        border: 1px solid #d7d7d7;
+        .select--data--source--box{
+          font-size: 16px;
+          padding: 15px 0 10px 25px;
+        }
       }
       .data--base--sidenav--right--box{
         float: left;
@@ -108,7 +136,7 @@ body {
   .data--base--wrapper{
     height: 100%;
     width: 235px;
-    background: #626569;
+    background: #f5f5f5;
     box-shadow: none;
     .header{
       //height: 55px;
@@ -117,17 +145,29 @@ body {
     }
     .data--base--column--wrapper{
       background: transparent;
-      color: #c0c4c7;
-      padding: 17px 0;
+      color: #ababab;
+      padding: 0;
       .flex{
         padding: 8px 0;
       }
       .each--column--box {
-        border-left: 5px solid transparent;
+        //border: 1px solid #f5f5f5;
+        border-right: 5px solid #9f9f9f;
         &.active {
-          background-color: #333333;
-          color: #ffffff !important;
-          border-left: 5px solid #fa7455;
+          //background-color: #ffffff;
+          color: #696c70 !important;
+          border: 1px solid #d7d7d7;
+          border-right: none;
+          //border-right: 5px solid #3498db;
+          background: #ffffff  url(../images/select--data--source--border-bg.jpg) no-repeat top right;
+          background-clip: border-box;
+          background-origin: border-box ;
+        }
+        &:hover{
+          //border-color: #d7d7d7;
+        }
+        .md-button{
+          padding-left: 23px;
         }
       }
     }
