--- a/app/css/main.css
+++ b/app/css/main.css
@@ -12,22 +12,25 @@ body {
   color: #333; }
 
 .info--archive--main--content--wrapper {
-  width: 1366px;
+  width: 1920px;
   margin: 0 auto;
   height: 100%;
   position: relative; }
   .info--archive--main--content--wrapper .info--archive--sidebar--wrapper {
     height: 100%;
     width: 178px;
-    background: #464646; }
+    background: #464646;
+    position: relative !important;
+    z-index: 99;
+    box-shadow: -5px 0px 10px 3px rgba(0, 0, 0, 0.1) inset; }
     .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .header {
-      height: 55px;
-      min-height: 55px;
+      height: 57px;
+      min-height: 57px;
       background: #40b98e;
       font-size: 18px;
       border-right: 1px solid #40b98e; }
       .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .header .md-toolbar-tools {
-        height: 55px;
+        height: 57px;
         font-size: 18px; }
     .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content {
       border-right: 1px solid #3c4b4b; }
@@ -45,12 +48,22 @@ body {
         .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .separate--column--header {
           background: transparent;
           color: #848484; }
+          .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .separate--column--header .md-subheader-inner {
+            border-bottom: 1px solid #505050;
+            padding-bottom: 6px;
+            padding-left: 30px;
+            font-size: 12px; }
         .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .each--column--box {
-          border-left: 5px solid transparent; }
+          border-left: 5px solid #464646; }
           .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .each--column--box.active {
             background-color: #333333;
             color: #ffffff !important;
-            border-left: 5px solid #fa7455; }
+            border-left: 5px solid #de6262; }
+            .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .each--column--box.active:hover {
+              cursor: default !important;
+              background: #464646 !important; }
+          .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .each--column--box:hover {
+            border-color: #848484; }
           .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .each--column--box__text {
             min-height: 40px; }
             .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .each--column--box__text .item--img {
@@ -60,7 +73,9 @@ body {
               text-align: center;
               vertical-align: text-bottom; }
           .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .each--column--box .md-button {
-            min-height: 40px; }
+            height: 48px;
+            line-height: 48px;
+            padding-left: 27px; }
   .info--archive--main--content--wrapper .info--archive--right--content--wrapper {
     position: absolute;
     top: 0px;
@@ -68,37 +83,50 @@ body {
     right: 0px;
     bottom: 0px; }
     .info--archive--main--content--wrapper .info--archive--right--content--wrapper .top--head--box {
-      height: 55px;
-      width: 1188px;
+      height: 57px;
+      width: 1742px;
       background: #eaeae2; }
     .info--archive--main--content--wrapper .info--archive--right--content--wrapper .data--base--sidenav--box {
-      overflow-x: hidden;
+      position: relative;
+      z-index: 10;
       width: 100%;
-      height: calc(100% - 55px); }
+      height: calc(100% - 57px);
+      border-top: 1px solid #dfe0e1;
+      border-left: 1px solid #d7d7d7;
+      border-right: 1px solid #f2f2f2; }
       .info--archive--main--content--wrapper .info--archive--right--content--wrapper .data--base--sidenav--box .data--base--sidenav {
         float: left;
-        height: 100%; }
+        height: 100%;
+        border: 1px solid #d7d7d7; }
+        .info--archive--main--content--wrapper .info--archive--right--content--wrapper .data--base--sidenav--box .data--base--sidenav .select--data--source--box {
+          font-size: 16px;
+          padding: 15px 0 10px 25px; }
       .info--archive--main--content--wrapper .info--archive--right--content--wrapper .data--base--sidenav--box .data--base--sidenav--right--box {
         float: left; }
   .info--archive--main--content--wrapper .data--base--wrapper {
     height: 100%;
     width: 235px;
-    background: #626569;
+    background: #f5f5f5;
     box-shadow: none; }
     .info--archive--main--content--wrapper .data--base--wrapper .header {
       min-height: 0px; }
     .info--archive--main--content--wrapper .data--base--wrapper .data--base--column--wrapper {
       background: transparent;
-      color: #c0c4c7;
-      padding: 17px 0; }
+      color: #ababab;
+      padding: 0; }
       .info--archive--main--content--wrapper .data--base--wrapper .data--base--column--wrapper .flex {
         padding: 8px 0; }
       .info--archive--main--content--wrapper .data--base--wrapper .data--base--column--wrapper .each--column--box {
-        border-left: 5px solid transparent; }
+        border-right: 5px solid #9f9f9f; }
         .info--archive--main--content--wrapper .data--base--wrapper .data--base--column--wrapper .each--column--box.active {
-          background-color: #333333;
-          color: #ffffff !important;
-          border-left: 5px solid #fa7455; }
+          color: #696c70 !important;
+          border: 1px solid #d7d7d7;
+          border-right: none;
+          background: #ffffff url(../images/select--data--source--border-bg.jpg) no-repeat top right;
+          background-clip: border-box;
+          background-origin: border-box; }
+        .info--archive--main--content--wrapper .data--base--wrapper .data--base--column--wrapper .each--column--box .md-button {
+          padding-left: 23px; }
 
 .project--manage--main--content--wrapper {
   width: 100%;
