--- a/app/css/main.css
+++ b/app/css/main.css
@@ -28,7 +28,8 @@ body {
       min-height: 57px;
       background: #40b98e;
       font-size: 18px;
-      border-right: 1px solid #40b98e; }
+      border-right: 1px solid #40b98e;
+      box-shadow: -5px 0px 10px rgba(0, 0, 0, 0.1) inset; }
       .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .header .md-toolbar-tools {
         height: 57px;
         font-size: 18px; }
