--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -35,6 +35,7 @@ body {
       background: #40b98e;
       font-size: 18px;
       border-right: 1px solid #40b98e;
+      box-shadow: -5px 0px 10px rgba(0, 0, 0, 0.1) inset;
       .md-toolbar-tools{
         height: 57px;
         font-size: 18px;
