--- a/app/webComponents/common/hsUiGridTemplates/css/uiGridTemplates.css
+++ b/app/webComponents/common/hsUiGridTemplates/css/uiGridTemplates.css
@@ -1,3 +1,7 @@
+.grid-search-input {
+  margin-top: 10px;
+  border-radius: 0px; }
+
 .dataBase-grid .ui-grid-header-cell {
   height: 100px; }
 
@@ -29,7 +33,6 @@ div.ui-grid-cell input.edit-input {
 .ui-grid-row:nth-child(odd) .ui-grid-cell {
   background-color: transparent;
   border-right: none; }
-
 .ui-grid-row:nth-child(even) .ui-grid-cell {
   background-color: transparent;
   border-right: none; }
@@ -113,4 +116,4 @@ div.ui-grid-cell input.edit-input {
   margin-left: 0px;
   margin-top: 18px; }
 
-/*# sourceMappingURL=../../../../../maps/webComponents/common/hsUiGridTemplates/css/uiGridTemplates.css.map */
+/*# sourceMappingURL=uiGridTemplates.css.map */
