--- a/app/webComponents/common/hsUiGridTemplates/css/uiGridTemplates.scss
+++ b/app/webComponents/common/hsUiGridTemplates/css/uiGridTemplates.scss
@@ -1,4 +1,8 @@
 @charset "utf-8";
+.grid-search-input {
+  margin-top: 10px;
+  border-radius: 0px;
+}
 .dataBase-grid .ui-grid-header-cell{
   height: 100px;
 }
